Stable versions
---------------

4.0.3 ():
	- Fix native-endian coreaudio output (reported by Misty De Meo)
	- Fix MinGW32 build (reported by vaseleos0)
	- Fix Cygwin build (reported by Benjamin Shadwick)

	New features requested by Benjamin Shadwick:
	- Add commands '<' and '>' to jump to previous/next sequence
	- Add command 'z' to toggle the subsong explorer on/off
	- Add option -z <num> to play a specified sequence
	- Add option -Z to play all sequences in module
	- Add option --loop-all to loop over entire module list

4.0.2 (20130407):
	- Fix data type in coreaudio driver

	Changes by Jan Engelhardt:
	- give Pulseaudio higher priority than ALSA
	- give ALSA output higher priority than OSS
	- fix background process handling
	- sanitize background/foreground notation

4.0.1 (20130216):
	- fix license issues reported by Jan Engelhardt
	- fix pulseaudio detection (by Emanuel Haupt)

4.0.0 (20130213):
	- rewrite player to use libxmp 4.0