@@ -399,12 +399,11 @@ int main(int argc, char **argv)
   else if ((y) < 0) (x) &= ~ (z); \
 } while (0)
 
-			flags = 0;
+			flags = xmp_get_player(xc, XMP_PLAYER_CFLAGS);
 			set_flag(flags, opt.vblank, XMP_FLAGS_VBLANK);
 			set_flag(flags, opt.fx9bug, XMP_FLAGS_FX9BUG);
 			set_flag(flags, opt.fixloop, XMP_FLAGS_FIXLOOP);
-
-			xmp_set_player(xc, XMP_PLAYER_FLAGS, flags);
+			xmp_set_player(xc, XMP_PLAYER_CFLAGS, flags);
 #if XMP_VERCODE < 0x040003
 			if (flags & XMP_FLAGS_VBLANK) {
 				xmp_scan_module(xc);
